k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: any-folder
spec:
  selector:
    app: any-folder
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
